correction for letter-spacing

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -52,7 +52,6 @@
     font-weight: 900;
     font-size: 45px;
     line-height: 49px;
-    letter-spacing: 0%;
   }
 
   .intro__text {
@@ -61,7 +60,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
-    letter-spacing: 0%;
   }
 
   .intro__author {
@@ -70,7 +68,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
-    letter-spacing: 0%;
     text-align: right;
   }
 
@@ -80,7 +77,6 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 26.08px;
-    letter-spacing: 0%;
   }
 }
 
@@ -98,7 +94,6 @@
     font-weight: 900;
     font-size: 32px;
     line-height: 35px;
-    letter-spacing: 0%;
   }
 
   .intro__text {
@@ -108,7 +103,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 30px;
-    letter-spacing: 0%;
   }
 
   .intro__author {
@@ -117,7 +111,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
-    letter-spacing: 0%;
     text-align: right;
   }
 
@@ -127,6 +120,5 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 26.08px;
-    letter-spacing: 0%;
   }
 }
