--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -19,7 +19,6 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
-  letter-spacing: 0%;
   text-align: center;
 }
 
@@ -34,7 +33,6 @@
     font-weight: 900;
     font-size: 75px;
     line-height: 79px;
-    letter-spacing: 0%;
     text-align: center;
   }
 
@@ -43,7 +41,6 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 36px;
-    letter-spacing: 0%;
     text-align: center;
   }
 }
@@ -58,7 +55,6 @@
     font-weight: 900;
     font-size: 40px;
     line-height: 44px;
-    letter-spacing: 0%;
     text-align: center;
   }
 
@@ -69,7 +65,6 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    letter-spacing: 0%;
     text-align: center;
   }
 }
